<resources>
    <string name="app_name">FacilityManagementApp-Group-Two</string>
    <string name="fragment_onboard_facility">FACILITY \nMANAGEMENT \nAPP</string>
    <string name="fragment_onboard_manageComplaint">Manage all your complaints in one place</string>
    <string name="fragment_onboard_getStarted">Get started</string>
    <string name="fragment_onboard_imageHolder">Onboard Image Holder</string>

    <string name="fragment_singleComplaint_complaintBody">An suas viderer pro. Vis cu magna altera, ex his vivendo atomorum. An suas viderer pro. \n\nAn suas viderer pro. Vis cu magna altera, ex his vivendo atomorum. An suas viderer pro.</string>
    <string name="fragment_singleComplaint_comments">Comments</string>
    <string name="fragment_singleComplaint_complaintImage_contentDescription">Complaint Image Description</string>
    <string name="fragment_singleComplaint_commentCount">0</string>
    <string name="fragment_singleComplaint_likesCount">0</string>
    <string name="fragment_singleComplaint_writeAComment">Write a comment</string>
    <string name="fragment_singleComplaint_contentDesc_clickToLike">Click to like</string>
    <string name="fragment_singleComplaint_contentDesc_clickToPost">Click to post</string>
    <string name="fragment_singleComplaint_contentDesc_clickToComment">Click to comment</string>
    <string name="item_commenter_image_content_description">Commenter Image</string>
    <string name="fragment_singleComplaint_commenterName">Jorge Watson</string>
    <string name="fragment_singleComplaint_elapsedTime">2 hours ago</string>
    <string name="fragment_singleComplaint_commentBody">Eum dicta fuisset phaedrum ei.</string>
    <string name="fragment_singleComment_reply">Reply</string>
    <string name="fragment_singleComplaint_acNotWorking">AC is Not Working</string>
    <string name="fragment_singleComplaint_back">Back</string>
    <string name="fragment_singleComplaint_back_contentDescription">Click to go back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="feeds">Feeds</string>
    <string name="ac_is_not_working">AC is not working</string>
    <string name="complain_body">An suas viderer pro. Vis cu magna altera, ex his vivendo atomorum.</string>
    <string name="_20_12_2019">20/12/2019</string>
    <string name="search">Search</string>
    <string name="no_pending_request">You do not have a \nPending request...\n Make a new request</string>
    <string name="ronald_robertson">Ronald Robertson</string>

    <!--    String resources for SuccessfulAuthFragment and AuthorizingUserFragment -->
    <string name="fragment_authorizing_user_loading">Please wait, while you are authorized…</string>
    <string name="fragment_successful_auth_title">Success!</string>
    <string name="fragment_successful_auth_message">You have been successfully\nauthorized, and logged in as\n%1$s</string>
    <string name="fragment_successful_auth_button">Proceed</string>

    <!--  String resources for FailedAuthenticationFragment  -->
    <string name="fragment_failed_authentication_title">Ooops....</string>
    <string name="fragment_failed_authentication_try_again_btn">Try Again</string>
    <string name="fragment_failed_authentication_back_btn">Back</string>
    <string name="fragment_failed_authentication_text_body">Something went wrong. We\'re doing\neverything to fix it and should be up\nand running soon</string>
    <string name="select_a_category">Select a Category...</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="profile_mail">joseph.okezi@decagon.dev</string>
    <string name="squad">Squad</string>
    <string name="_006">SQ006</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="mobile_number">+2348020000000</string>
    <string name="profile_name">Joseph Okezi</string>
    <string name="log_out">Log Out</string>
    <string name="submit_profile">Update Profile</string>
    <string name="sq006">SQ006</string>
    <string name="android">Android</string>
    <string name="empty_feeds_msg">No items to display</string>
    <string name="fragment_single_complaint_noComments">No Comments Found!</string>
    <string name="empty_search_list_msg">Sorry, we couldn\'t find any request matching your input 😨</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="stack_squad">Stack-Squad</string>
    <string name="my_requests">My Requests</string>
    <string name="submit_a_new_request">Submit a new Request</string>
    <string name="edit">Edit</string>

    <!-- dropdown adapter field-->
    <string-array name="selection_field">
        <item>Food</item>
        <item>Apartment</item>
        <item>Appliances</item>
        <item>Others</item>
    </string-array>
    <string-array name="stack_selection">
        <item>Android</item>
        <item>.NET</item>
        <item>Python</item>
        <item>Node</item>
        <item>iOS</item>
        <item>Java</item>
        <item>Quality Assurance</item>
    </string-array>

</resources>