<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/complain_title"
            android:layout_width="wrap_content"
            android:text="@string/ac_is_not_working"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/complain_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:textSize="15sp"
            android:text="@string/_20_12_2019"
            android:layout_alignParentEnd="true"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

    </RelativeLayout>
    <TextView
        android:id="@+id/complain_details"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complain_body"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/divider"/>

</LinearLayout>