<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cardView2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/fragment_singleComplaint_commenterName_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/fragment_singleComplaint_commenterName"
        android:textColor="#231F20"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <TextView
        android:id="@+id/fragment_singleComplaint_timeElapsed_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment_singleComplaint_elapsedTime"
        android:textColor="#80231F20"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_singleComplaint_commentBody_tv"
        app:layout_constraintStart_toStartOf="@+id/fragment_singleComplaint_commenterName_tv"
        app:layout_constraintTop_toBottomOf="@+id/fragment_singleComplaint_commenterName_tv" />

    <TextView
        android:id="@+id/fragment_singleComplaint_commentBody_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment_singleComplaint_commentBody"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_singleComplaint_viewDIvider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fragment_singleComplaint_timeElapsed_tv" />

    <View
        android:id="@+id/fragment_singleComplaint_viewDIvider"
        android:layout_width="0dp"
        android:layout_height="0.8dp"
        android:layout_marginBottom="8dp"
        android:background="#A6545458"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>