<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_onboard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OnboardingFragment">

    <TextView
        android:id="@+id/fragment_onboard_facilityManagementApp_tv"
        style="@style/fragment_onboard_facilityManagementApp_tv_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/fragment_onboard_facilityManagementApp_marginTop"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/fragment_onboard_facility"
        app:layout_constraintBottom_toTopOf="@+id/fragment_onboard_guidelineOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fragment_onboard_businessUsers_iv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/fragment_onboard_imageHolder"
        android:src="@drawable/business_users_warning_1"
        app:layout_constraintBottom_toTopOf="@+id/fragment_onboard_guidelineTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_onboard_guidelineOne" />

    <TextView
        android:id="@+id/fragment_onboard_manageComplaint_tv"
        style="@style/fragment_onboard_manageComplaint_tv_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_onboard_manageComplaint_marginBottom"
        android:text="@string/fragment_onboard_manageComplaint"
        app:layout_constraintBottom_toTopOf="@+id/fragment_onboard_guidelineThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_onboard_guidelineTwo"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/fragment_onboard_getStarted_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_onboard_facilityManagementApp_marginStartEnd"
        android:layout_marginEnd="@dimen/fragment_onboard_facilityManagementApp_marginStartEnd"
        android:backgroundTint="@color/green_400"
        android:padding="14dp"
        android:text="@string/fragment_onboard_getStarted"
        app:cornerRadius="@dimen/fragment_onboard_getStarted_btn_cornerRadius"
        app:layout_constraintBottom_toTopOf="@+id/fragment_onboard_guidelineFour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_onboard_guidelineThree" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_onboard_guidelineThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_onboard_guidelineFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.91" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_onboard_guidelineOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_onboard_guidelineTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>