<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.SuccessfulAuthFragment">

    <LinearLayout
        android:id="@+id/fragment_successful_auth_ll"
        android:layout_width="270dp"
        android:layout_height="136dp"
        android:background="@drawable/fragment_successful_auth_ll_bg"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <TextView
            android:id="@+id/fragment_successful_auth_title_tv"
            android:layout_width="238dp"
            android:layout_height="22dp"
            android:gravity="center"
            android:text="@string/fragment_successful_auth_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fragment_successful_auth_msg_tv"
            android:layout_width="238dp"
            android:layout_height="72dp"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:padding="7dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/fragment_successful_auth_message"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:id="@+id/fragment_successful_auth_v"
        android:layout_width="270dp"
        android:layout_height="0.8dp"
        android:background="@drawable/fragment_successful_auth_v_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_successful_auth_ll" />

    <LinearLayout
        android:id="@+id/fragment_successful_auth_ll2"
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:background="@drawable/fragment_successful_auth_btn_bg"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_successful_auth_v">

        <Button
            android:id="@+id/fragment_successful_auth_btn"
            style="?borderlessButtonStyle"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:background="@color/fragment_successful_auth_ll_bg"
            android:gravity="center"
            android:text="@string/fragment_successful_auth_button"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/fragment_successful_auth_btn"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>